# tickwise

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  Tickwise-Windows-SHA256  sbom.cdx.json  tickwise.env.sample
Binary/: tickwise.env.sample  tickwise_v1_1_Mac_ARM_hash_sha256.txt  tickwise_v1_1_windows-64_hash_sha256.txt
docs/: # Strategy_Guide.md  Security_Design.md  command-reference.md  indicator-guide.md  setup.md  strategy_Guide.md
docs/Dev_Oper/: CONTRIBUTING.md  Github_運用ポリシー.md  inpl-prepushhook.sh  別紙：運用フロー対応コマンド集.md
docs/Dev_prog/: Design_Philosophy.md  Security_Design.md  why-tickwise-rust.md
docs/manual/: command-reference.md  indicator-guide.md  integration-guide.md  investor-guide.md  setup.md  strategy_Guide.md
docs/sample/: LLM用Promptスキン.txt
docs/sbom/: tickwise-v1_1-sbom.cdx.xml
samples/: LLM用Promptスキン.txt  softbank-reversal-20251230.md
src/: main.rs
